--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
-
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', serif;
     overflow-y: scroll;
 }
 
