--- a/resources/assets/sass/dashboard.scss
+++ b/resources/assets/sass/dashboard.scss
@@ -69,7 +69,7 @@
 .total-panel
 {
     width: calc(100% / 3);
-    padding: 20px 15px 14px;
+    padding: 19px 15px 15px;
 
     background: #fff;
     box-shadow: -1px 2px 5px rgba(0, 0, 0, .05), 1px 2px 5px rgba(0, 0, 0, .05), 0 3px 5px rgba(0, 0, 0, .05);
@@ -90,7 +90,7 @@
             font-weight: bold;
             line-height: 26px;
 
-            margin-top: 21px;
+            margin-top: 20px;
             margin-bottom: 9px;
         }
         .total-meta
